--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,284 @@
     transform: rotate(360deg);
   }
 }
+h2{
+  font-family:'Times New Roman', Times, serif;
+   color:navy;
+}
+.btn {
+ box-sizing: border-box;
+ -webkit-appearance: none;
+ -moz-appearance: none;
+ appearance: none;
+ background-color: transparent;
+ border: 2px solid #e74c3c;
+ border-radius: 0.6em;
+ color: #e74c3c;
+ cursor: pointer;
+ display: -webkit-box;
+ display: -webkit-flex;
+ display: -ms-flexbox;
+ display: flex;
+ -webkit-align-self: center;
+ -ms-flex-item-align: center;
+ align-self: center;
+ font-size: 1rem;
+ font-weight: 400;
+ line-height: 1;
+ padding: 1.2em 2.8em;
+ text-decoration: none;
+ text-align: center;
+ text-transform: uppercase;
+ font-family: 'Montserrat', sans-serif;
+ font-weight: 700;
+}
+
+.btn:hover,
+.btn:focus {
+ color: black;
+ outline: 0;
+
+}
+
+.third {
+ border-color: #3498db;
+ color: #fff;
+ box-shadow: 0 0 40px 40px #3498db inset, 0 0 0 0 #3498db;
+ -webkit-transition: all 150ms ease-in-out;
+ transition: all 150ms ease-in-out;
+}
+
+.third:hover {
+ box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
+}
+
+
+.animate-charcter {
+ text-transform: uppercase;
+ background-image: linear-gradient(-225deg,
+     #231557 0%,
+     #44107a 29%,
+     #ff1361 67%,
+     #fff800 100%);
+ background-size: auto auto;
+ background-clip: border-box;
+ background-size: 200% auto;
+ color: #fff;
+ background-clip: text;
+ text-fill-color: transparent;
+ -webkit-background-clip: text;
+ -webkit-text-fill-color: transparent;
+ animation: textclip 2s linear infinite;
+ display: inline-block;
+ font-size: 50px;
+ margin-top: 50px;
+}
+
+@keyframes textclip {
+ to {
+   background-position: 200% center;
+ }
+}
+
+.arrow {
+ position: fixed;
+ background-color: rgba(161, 109, 14, 1);
+ border-radius: 50%;
+ height: 50px;
+ bottom: 40px;
+ right: 50px;
+ text-decoration: none;
+ text-align: center;
+ line-height: 50px;
+}
+
+
+footer .main-footer {
+ padding: 20px 0;
+ background: #252525;
+}
+
+footer ul {
+ padding-left: 0;
+ list-style: none;
+}
+
+/* Copy Right Footer */
+.footer-copyright {
+ background: #222;
+ padding: 5px 0;
+}
+
+.footer-copyright .logo {
+ display: inherit;
+}
+
+.footer-copyright nav {
+ float: right;
+ margin-top: 5px;
+}
+
+.footer-copyright nav ul {
+ list-style: none;
+ margin: 0;
+ padding: 0;
+}
+
+.footer-copyright nav ul li {
+ border-left: 1px solid #505050;
+ display: inline-block;
+ line-height: 12px;
+ margin: 0;
+ padding: 0 8px;
+}
+
+.footer-copyright nav ul li a {
+ color: #969696;
+}
+
+.footer-copyright nav ul li:first-child {
+ border: medium none;
+ padding-left: 0;
+}
+
+.footer-copyright p {
+ color: #969696;
+ margin: 2px 0 0;
+}
+
+/* Footer Top */
+.footer-top {
+ background: #252525;
+ padding-bottom: 30px;
+ margin-bottom: 30px;
+ border-bottom: 3px solid #222;
+}
+
+/* Footer transparent */
+footer.transparent .footer-top,
+footer.transparent .main-footer {
+ background: transparent;
+}
+
+footer.transparent .footer-copyright {
+ background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3);
+}
+
+/* Footer light */
+footer.light .footer-top {
+ background: #f9f9f9;
+}
+
+footer.light .main-footer {
+ background: #f9f9f9;
+}
+
+footer.light .footer-copyright {
+ background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3);
+}
+
+/* Footer 4 */
+.footer- .logo {
+ display: inline-block;
+}
+
+/*==================== 
+ Widgets 
+====================== */
+.widget {
+ padding: 20px;
+ margin-bottom: 40px;
+}
+
+.widget.widget-last {
+ margin-bottom: 0px;
+}
+
+.widget.no-box {
+ padding: 0;
+ background-color: transparent;
+ margin-bottom: 40px;
+ box-shadow: none;
+ -webkit-box-shadow: none;
+ -moz-box-shadow: none;
+ -ms-box-shadow: none;
+ -o-box-shadow: none;
+}
+
+.widget li a {
+ color: #ff8d1e;
+}
+
+.widget li a:hover {
+ color: #4b92dc;
+}
+
+.widget-title {
+ margin-bottom: 20px;
+}
+
+.widget-title span {
+ background: #839FAD none repeat scroll 0 0;
+ display: block;
+ height: 1px;
+ margin-top: 25px;
+ position: relative;
+ width: 20%;
+}
+
+.widget-title span::after {
+ background: inherit;
+ content: "";
+ height: inherit;
+ position: absolute;
+ top: -4px;
+ width: 50%;
+}
+
+.widget-title.text-center span,
+.widget-title.text-center span::after {
+ margin-left: auto;
+ margin-right: auto;
+ left: 0;
+ right: 0;
+}
+
+.widget .badge {
+ float: right;
+ background: #7f7f7f;
+}
+
+.typo-light h1,
+.typo-light h2,
+.typo-light h3,
+.typo-light h4,
+.typo-light h5,
+.typo-light h6,
+.typo-light p,
+.typo-light div,
+.typo-light span,
+.typo-light small {
+ color: #fff;
+}
+
+ul.social-footer2 {
+ margin: 0;
+ padding: 0;
+ width: auto;
+}
+
+ul.social-footer2 li {
+ display: inline-block;
+ padding: 0;
+}
+
+ul.social-footer2 li a:hover {
+ background-color: #ff8d1e;
+}
+
+ul.social-footer2 li a {
+ display: block;
+ height: 30px;
+ width: 30px;
+ text-align: center;
+}
